--- a/CYOA.html
+++ b/CYOA.html
@@ -126,7 +126,7 @@ Atlas, of course, responded by suing your team but the public was already beginn
 
 [[Continue-&gt;Atlas Backing Down]]</tw-passagedata><tw-passagedata pid="13" name="Prelude" tags="" position="800,150" size="100,100">This &quot;Choose Your Own Adventure&quot; story is based on the case study, &quot;Automated Active Response Weaponry&quot;, by the ACM Comittee on Professional Ethics.
 
-Created by Daniel Todd, Fraser Wong, and Tallal Gohar.
+Created by Daniel Todd (writer), Fraser Wong (writer), and Tallal Gohar (programmer).
 
 [[Start-&gt;Intro]]</tw-passagedata><tw-passagedata pid="14" name="Keep your monotonous SQL querying job" tags="" position="875,600" size="100,100">You decide to politely decline the promotion and stick to your SQL querying. 
 
